--- a/restaurant.html
+++ b/restaurant.html
@@ -23,7 +23,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" aria-label="breadcrumb" >
-      <li><a href="/">Home</a></li>
+      <li><a aria-label="Home" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -39,7 +39,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container" aria-label="restaurant info">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
